# budgeting

./: .gitignore  .pre-commit-config.yaml  LICENSE  budget.py  pyproject.toml
config/: README.md
